--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "experiments with react.js",
   "config": {
-    "browserify_args": "src/js/main.jsx --transform [ reactify --es6 --target es5 ] --global-transform uglifyify --debug",
+    "browserify_args": "src/js/main.jsx --transform 6to5ify --global-transform uglifyify --debug",
     "bundle_js_tmp_path": "tmp/bundle.js.tmp"
   },
   "scripts": {
@@ -29,23 +29,22 @@
   },
   "homepage": "https://github.com/AprilArcus/marginalia",
   "dependencies": {
-    "react": "~0.12.2"
+    "react": "latest"
   },
   "devDependencies": {
-    "browserify": "~8.1.1",
-    "watchify": "~2.2.1",
-    "reactify": "~0.17.1",
-    "uglifyify": "^3.0.1",
-    "exorcist": "0.1.6",
-    "onchange": "0.0.2",
-    "gulp": "~3.8.10",
-    "gulp-util": "~3.0.2",
-    "gulp-sourcemaps": "~1.3.0",
+    "gulp": "^3.8.10",
     "vinyl-source-stream": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-transform": "^1.0.0",
+    "gulp-util": "^3.0.2",
+    "gulp-notify": "^2.1.0",
+    "browserify": "^8.1.1",
+    "watchify": "^2.2.1",
     "envify": "^3.2.0",
-    "gulp-notify": "^2.1.0"
+    "reactify": "latest",
+    "uglifyify": "^3.0.1",
+    "gulp-sourcemaps": "^1.3.0",
+    "6to5ify": "^3.1.2",
+    "lodash": "^2.4.1"
   },
   "engine": "node 0.10.35"
 }
