--- a/package.json
+++ b/package.json
@@ -30,21 +30,19 @@
     "react": "latest"
   },
   "devDependencies": {
-    "6to5ify": "^3.1.2",
-    "browserify": "^8.1.1",
-    "del": "^1.1.1",
     "envify": "^3.2.0",
-    "gulp": "^3.8.10",
-    "gulp-notify": "^2.1.0",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-util": "^3.0.2",
     "lodash": "^2.4.1",
-    "reactify": "latest",
-    "rimraf": "^2.2.8",
-    "uglifyify": "^3.0.1",
-    "vinyl-buffer": "^1.0.0",
+    "gulp": "^3.8.10",
     "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.2.1"
+    "vinyl-buffer": "^1.0.0",
+    "del": "^1.1.1",
+    "gulp-util": "^3.0.2",
+    "gulp-notify": "^2.1.0",
+    "browserify": "^8.1.1",
+    "watchify": "^2.2.1",
+    "6to5ify": "^3.1.2",
+    "uglifyify": "^3.0.1",    
+    "gulp-sourcemaps": "^1.3.0"
   },
   "engine": "node 0.10.35"
 }
