--- a/package.json
+++ b/package.json
@@ -1,45 +1,41 @@
 {
-  "name": "marginalia",
+  "name": "Marginalia",
   "version": "0.0.1",
-  "description": "experiments with react.js",
-  "config": {
-    "browserify_args": "src/js/main.jsx --transform 6to5ify --global-transform uglifyify --debug",
-    "bundle_js_tmp_path": "tmp/bundle.js.tmp"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "jshintConfig": {
-    "node": true,
-    "esnext": true
-  },
+  "description": "a new web publishing platform",
   "repository": {
     "type": "git",
     "url": "https://github.com/AprilArcus/marginalia.git"
   },
-  "author": "April Arcus",
-  "license": "MIT license",
+  "author": "April Arcus & Nicole Watamaniuk",
+  "license": "All Rights Reserved",
   "bugs": {
     "url": "https://github.com/AprilArcus/marginalia/issues"
   },
   "homepage": "https://github.com/AprilArcus/marginalia",
+  "scripts": {
+    "start": "node --harmony index.js",
+    "flow": "flow",
+    "migrate": "db-migrate --env=prod"
+  },
   "dependencies": {
-    "react": "latest"
+    "babel": "^5.8.20",
+    "handlebars": "^3.0.3",
+    "koa": "^0.21.0",
+    "koa-bodyparser": "^2.0.0",
+    "koa-generic-session": "^1.9.0",
+    "koa-pg-session": "^1.2.0",
+    "koa-render": "^0.2.1",
+    "koa-router": "^5.1.2",
+    "passport-facebook": "^2.0.0",
+    "passport-google-auth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3"
   },
   "devDependencies": {
-    "envify": "^3.2.0",
-    "lodash": "^2.4.1",
-    "gulp": "^3.8.10",
-    "vinyl-source-stream": "^1.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "del": "^1.1.1",
-    "gulp-util": "^3.0.2",
-    "gulp-notify": "^2.1.0",
-    "browserify": "^8.1.1",
-    "watchify": "^2.2.1",
-    "6to5ify": "^3.1.2",
-    "uglifyify": "^3.0.1",    
-    "gulp-sourcemaps": "^1.3.0"
-  },
-  "engine": "node 0.10.35"
+    "babel-eslint": "^4.0.5",
+    "db-migrate": "^0.9.18",
+    "eslint": "^1.0.0",
+    "eslint-plugin-react": "^3.2.0",
+    "source-map-support": "^0.3.2"
+  }
 }
