--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa": "^0.21.0",
     "koa-bodyparser": "^2.0.0",
     "koa-generic-session": "^1.9.0",
+    "koa-pg": "aprilarcus/koa-pg#pg-dependency",
     "koa-pg-session": "^1.2.0",
     "koa-render": "^0.2.1",
     "koa-router": "^5.1.2",
