--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "koa-bodyparser": "^2.0.0",
     "koa-generic-session": "^1.9.0",
     "koa-pg": "aprilarcus/koa-pg#pg-dependency",
-    "koa-pg-session": "^1.2.0",
+    "koa-pg-session": "aprilarcus/koa-pg-session#koa-pg",
     "koa-render": "^0.2.1",
     "koa-router": "^5.1.2",
     "passport-facebook": "^2.0.0",
