--- a/.eslintrc
+++ b/.eslintrc
@@ -169,7 +169,10 @@
     "spaced-comment": [1, "always", {"exceptions": ["-", "*"]}],
     "wrap-regex": 0,
     "max-depth": 0,
-    "max-len": [1, 80, 4],
+    "max-len": [1, 80, 4, {
+      "ignoreComments": true,
+      "ignoreUrls": true
+    }],
     "max-params": 0,
     "max-statements": 0,
     "no-bitwise": 1,
