--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "handlebars": "^3.0.3",
     "koa": "^0.21.0",
     "koa-bodyparser": "^2.0.0",
+    "koa-compose": "^2.3.0",
     "koa-generic-session": "^1.9.0",
     "koa-pg": "aprilarcus/koa-pg#pg-dependency",
     "koa-pg-session": "aprilarcus/koa-pg-session#koa-pg",
